# seller-ai-ml

./: .dockerignore  .env.prod.example  Dockerfile  Makefile  README.md  app.py  docker-compose.test.yaml  docker-compose.yaml  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
core/: embedding.py  llm.py  qdrant_search.py  rag_agent.py
src/: __main__.py  app.py  local_start.py
src/config/: settings.py
src/core/: embedding.py  llm.py  qdrant_search.py  rag_agent.py
src/utils/: helpers.py
