[project]
name = "seller-ai-rag-agent"
version = "0.1.0"
description = "Seller AI Rag Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0,<1",
    "logging>=0.4.9.6,<1",
    "numpy>=2.3.5,<3",
    "pydantic>=2.12.5,<3",
    "python-dotenv>=1.2.1,<2",
    "qdrant-client>=1.16.1,<2",
    "requests>=2.32.5,<3",
    "sentence-transformers>=5.1.2,<6",
    "torch>=2.9.1,<3",
    "transformers>=4.57.3,<5",
    "urllib3>=2.6.1,<3",
    "uvicorn>=0.38.0,<1",
]
